// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OrgsList renders correctly (loading) 1`] = `
<View
  style={
    Array [
      Object {
        "display": "flex",
        "flex": 1,
        "flexDirection": "column",
        "flexGrow": 1,
        "padding": 20,
        "paddingTop": 10,
      },
    ]
  }
>
  <View>
    <RCTScrollView
      style={
        Object {
          "display": "flex",
          "flex": 1,
          "flexDirection": "column",
        }
      }
    >
      <View>
        <View
          data-testID="org-728"
        >
          <Text
            data-testID="select-org"
            onPress={[Function]}
            style={
              Array [
                Object {
                  "color": "#333",
                },
                Object {
                  "display": "flex",
                  "flex": 1,
                  "flexWrap": "wrap",
                  "fontSize": 18,
                  "fontWeight": "normal",
                  "lineHeight": 20,
                  "marginTop": 18,
                },
                Object {
                  "color": "#056aff",
                },
              ]
            }
          >
            revelation
             
          </Text>
        </View>
      </View>
    </RCTScrollView>
    <ActivityIndicator
      size={300}
      style={
        Object {
          "alignItems": "center",
          "bottom": 0,
          "justifyContent": "center",
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    />
  </View>
</View>
`;

exports[`OrgsList renders correctly (pagination) 1`] = `
<View
  style={
    Array [
      Object {
        "display": "flex",
        "flex": 1,
        "flexDirection": "column",
        "flexGrow": 1,
        "padding": 20,
        "paddingTop": 10,
      },
    ]
  }
>
  <View
    style={
      Object {
        "display": "flex",
        "flexDirection": "row",
        "justifyContent": "space-between",
      }
    }
  >
    <View>
      <Text
        onPress={[Function]}
        style={
          Array [
            Object {
              "color": "#333",
            },
            Object {
              "fontSize": 36,
            },
            false,
          ]
        }
      >
        &lt;&lt;
      </Text>
    </View>
    <View>
      <Text
        onPress={[Function]}
        style={
          Array [
            Object {
              "color": "#333",
            },
            Object {
              "fontSize": 36,
            },
            false,
          ]
        }
      >
        &lt;
      </Text>
    </View>
    <View>
      <ActivityIndicator
        size={36}
      />
    </View>
    <View>
      <Text
        onPress={[Function]}
        style={
          Array [
            Object {
              "color": "#333",
            },
            Object {
              "fontSize": 36,
            },
            false,
          ]
        }
      >
        &gt;
      </Text>
    </View>
    <View>
      <Text
        onPress={[Function]}
        style={
          Array [
            Object {
              "color": "#333",
            },
            Object {
              "fontSize": 36,
            },
            false,
          ]
        }
      >
        &gt;&gt;
      </Text>
    </View>
  </View>
  <View>
    <RCTScrollView
      style={
        Object {
          "display": "flex",
          "flex": 1,
          "flexDirection": "column",
        }
      }
    >
      <View>
        <View
          data-testID="org-728"
        >
          <Text
            data-testID="select-org"
            onPress={[Function]}
            style={
              Array [
                Object {
                  "color": "#333",
                },
                Object {
                  "display": "flex",
                  "flex": 1,
                  "flexWrap": "wrap",
                  "fontSize": 18,
                  "fontWeight": "normal",
                  "lineHeight": 20,
                  "marginTop": 18,
                },
                Object {
                  "color": "#056aff",
                },
              ]
            }
          >
            revelation
             
          </Text>
        </View>
      </View>
    </RCTScrollView>
    <ActivityIndicator
      size={300}
      style={
        Object {
          "alignItems": "center",
          "bottom": 0,
          "justifyContent": "center",
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    />
  </View>
  <View
    style={
      Object {
        "display": "flex",
        "flexDirection": "row",
        "justifyContent": "space-between",
      }
    }
  >
    <View>
      <Text
        onPress={[Function]}
        style={
          Array [
            Object {
              "color": "#333",
            },
            Object {
              "fontSize": 36,
            },
            false,
          ]
        }
      >
        &lt;&lt;
      </Text>
    </View>
    <View>
      <Text
        onPress={[Function]}
        style={
          Array [
            Object {
              "color": "#333",
            },
            Object {
              "fontSize": 36,
            },
            false,
          ]
        }
      >
        &lt;
      </Text>
    </View>
    <View>
      <ActivityIndicator
        size={36}
      />
    </View>
    <View>
      <Text
        onPress={[Function]}
        style={
          Array [
            Object {
              "color": "#333",
            },
            Object {
              "fontSize": 36,
            },
            false,
          ]
        }
      >
        &gt;
      </Text>
    </View>
    <View>
      <Text
        onPress={[Function]}
        style={
          Array [
            Object {
              "color": "#333",
            },
            Object {
              "fontSize": 36,
            },
            false,
          ]
        }
      >
        &gt;&gt;
      </Text>
    </View>
  </View>
</View>
`;

exports[`OrgsList renders correctly 1`] = `
<View
  style={
    Array [
      Object {
        "display": "flex",
        "flex": 1,
        "flexDirection": "column",
        "flexGrow": 1,
        "padding": 20,
        "paddingTop": 10,
      },
    ]
  }
>
  <View>
    <RCTScrollView
      style={
        Object {
          "display": "flex",
          "flex": 1,
          "flexDirection": "column",
        }
      }
    >
      <View>
        <View
          data-testID="org-728"
        >
          <Text
            data-testID="select-org"
            onPress={[Function]}
            style={
              Array [
                Object {
                  "color": "#333",
                },
                Object {
                  "display": "flex",
                  "flex": 1,
                  "flexWrap": "wrap",
                  "fontSize": 18,
                  "fontWeight": "normal",
                  "lineHeight": 20,
                  "marginTop": 18,
                },
                Object {
                  "color": "#056aff",
                },
              ]
            }
          >
            revelation
             
          </Text>
        </View>
        <View
          data-testID="org-1375"
        >
          <Text
            data-testID="select-org"
            onPress={[Function]}
            style={
              Array [
                Object {
                  "color": "#333",
                },
                Object {
                  "display": "flex",
                  "flex": 1,
                  "flexWrap": "wrap",
                  "fontSize": 18,
                  "fontWeight": "normal",
                  "lineHeight": 20,
                  "marginTop": 18,
                },
                Object {
                  "color": "#056aff",
                },
              ]
            }
          >
            cdr
             
          </Text>
        </View>
      </View>
    </RCTScrollView>
  </View>
</View>
`;
